--- a/logseq/bak/journals/2022_10_01/2022-10-01T09_01_13.588Z.Desktop.md
+++ b/logseq/bak/journals/2022_10_01/2022-10-01T09_01_13.588Z.Desktop.md
@@ -1,5 +1,5 @@
 主題:: 關於 Human Design Guidelines
-新增日期:: [[Oct 1st, 2022]] 
+新增日期:: [[2022年10月01日]]
 標籤:: #Human Design Guidelines
 
 	- [[Story]]
@@ -15,7 +15,7 @@
 		- 受到蘋果的 HIG 啟發，暫時使用英文 [[Human Design Guidelines]] 作為初始名稱。
 -
 - 主題:: 設計助手的 Trello 使用指引 
-  新增日期:: [[Oct 1st, 2022]] 
+  新增日期:: [[2022年10月01日]]
   標籤:: #@Trello
 	- 在你自己的 List 之下，你可以：
 		- 你可以任意 `建立自己的卡片`
