--- a/journals/2022_10_01.md
+++ b/journals/2022_10_01.md
@@ -3,7 +3,7 @@
 標籤:: #Human Design Guidelines
 
 	- [[Story]]
-		- 在人類進行設計時，提供一個有效並且靈活的指南。(測試)
+		- 在人類進行設計時，提供一個有效並且靈活的指南。
 	- 創建知識庫方法
 		- 參考 Zettelkasten (卡片盒記憶法)
 		- 每當有新知識與腦中產生的時候，可以輕易地創建知識。
@@ -17,7 +17,7 @@
 - 主題:: 設計助手的 Trello 使用指引 
   新增日期:: [[Oct 1st, 2022]] 
   標籤:: #@Trello
-	- 在你自己的 List 之下，你可以：(測試)
+	- 在你自己的 List 之下，你可以：
 		- 你可以任意 `建立自己的卡片`
 		- 每個屬於你的卡片，你都可以 `自由的編輯內容`
 		- 你可以 `自由的把卡片從 ToDo → Doing`  (反過來也行)
