--- a/logseq/bak/pages/關於 Human Design Guidelines/2022-10-02T03_04_52.640Z.Desktop.md
+++ b/logseq/bak/pages/關於 Human Design Guidelines/2022-10-02T03_04_52.640Z.Desktop.md
@@ -1,7 +1,5 @@
-標題:: [[關於 Human Design Guidelines]]
 新增日期:: [[Oct 1st, 2022]] 
-標籤:: #Human-design-guidelines
-作者:: [[@Luke]]
+標籤:: #Human Design Guidelines
 
 	- [[Story]]
 		- 在人類進行設計時，提供一個有效並且靈活的指南。
@@ -14,4 +12,5 @@
 		- Page 的使用方法 `(beta)`
 			- 有需要針對單一主題進行定義或是說明時，可以輔助的使用 Page。
 	- 名稱由來
-		- 受到蘋果的 HIG 啟發，暫時使用英文 [[Human-design-guidelines]] 作為初始名稱。
+		- 受到蘋果的 HIG 啟發，暫時使用英文 [[Human Design Guidelines]] 作為初始名稱。
+-
