--- a/logseq/bak/pages/設計助手的 Trello 使用指引/2022-10-03T01_27_44.992Z.Desktop.md
+++ b/logseq/bak/pages/設計助手的 Trello 使用指引/2022-10-03T01_27_44.992Z.Desktop.md
@@ -1,10 +1,12 @@
-新增日期:: [[Oct 1st, 2022]] 
+title:: [[設計助手的 Trello 使用指引]]
+新增日期:: [[Oct 1st, 2022]]
 標籤:: #@Trello
+作者:: [[@Luke]]
 
 	- 在設計助手的 List 之下，你可以：
 		- 可以任意 `建立自己的卡片`
 		- 每個屬於你的卡片，你都可以 `自由的編輯內容`
 		- 可以 `自由的把卡片從 ToDo → Doing`  (反過來也行)
 	-
-	- 只有我可以：
-		- 只有我可以把卡片移動到 `Done`
+	- 只有 [[Scrum Master]] 可以：
+		- 只有 [[Scrum Master]] 可以把卡片移動到 `Done`
